.collect replaced by .toList